    * new notification system with an optional jabber notification bot
    * cfg.password_checker (default: use some simple builtin checks for too
      easy passwords and, if available, python-crack).
      Use password_checker = None to disable password checking.
    * jabber notification support; for more information see:
      http://moinmo.in/MoinMoinTodo/Release_1.7/HelpOnNotification

  Bugfixes:
    * lots of bugfixes related to link parsing

  Other changes:
    * attachment links for non-existing attachments look different now:
      the note about the non-existing attachment moved to the link title,
      the link is shown with nonexistent class (grey).
    * cfg.show_login is gone, see code in theme/__init__.py, this affects
      many themes!
    * needs a new userprefs/ plugin directory

Version 1.6.current:

  Developer notes (these should be moved to the end in the release):
    * Page.url() does not escape any more. You have to use wikiutil.escape()
      yourself if you want to write the URL to HTML and it contains e.g. &.
    * the testing wikiconfig moved to tests/wikiconfig.py, the testing wiki
      is now created in tests/wiki/...
    * killed "processors" (finally), formatter method changed to:
      formatter.parser(parsername, lines)
    * refactored some actions to use ActionBase base class
    * moved "test" action from wikiaction to MoinMoin/action/
      (and use ActionBase)
    * moved MoinMoin/config.py to MoinMoin/config/__init__.py
    * moved MoinMoin/multiconfig.py to MoinMoin/config/multiconfig.py
    * moved "SystemInfo" macro from wikimacro to MoinMoin/macro/
    * moved wikiaction.py stuff to MoinMoin/action/__init__.py
    * moved wikimacro.py stuff to MoinMoin/macro/__init__.py
    * moved wikirpc.py stuff to MoinMoin/xmlrpc/__init__.py
    * moved wikitest.py stuff to action/test.py (only used from there)
    * moved formatter/base.py to formatter/__init__.py (FormatterBase)